Added Completed Stage

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -27,6 +27,11 @@ pipeline {
                 }
                }
            }
+        stage('Complete') {
+            steps {
+                echo 'job is complete!!'
+            }
+        }
 
     }
 }
